--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="playstore">
 </head>
 <body>
-
+    <header class="header">
+        <div>
+            <img src="logo.jpeg" alt="" class="logo">
+        </div>
+    </header>
 </body>
 </html>
