--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <div>
-            <img src="logo.jpeg" alt="" class="logo">
+            <img src="logo.png" alt="" class="logo">
         </div>
     </header>
 </body>
