--- a/index.html
+++ b/index.html
@@ -4,13 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Playstore</title>
-    <link rel="stylesheet" href="playstore">
+    <link rel="stylesheet" href="playstore.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header class="header">
-        <div>
-            <img src="logo.png" alt="" class="logo">
+        <div class="head-div">
+            <div>
+                <img src="logo.png" alt="" class="logo">
+            </div>
+            <div class="head-text">
+                <p>Games</p>
+            </div>
+            <div class="head-text">
+                <p>Apps</p>
+            </div>
+            <div class="head-text">
+                Kids
+            </div>
+            <div class="head-icons">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <i class="fa-solid fa-question"></i>
+                <i class="fa-solid fa-user"></i>
+            </div>
         </div>
+       
     </header>
 </body>
 </html>
