--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <h1 class="h1">Popular Apps</h1>
     <div class="row-1">
         <div class="images">
-            <img src="what.png" alt="">
+            <img src="what.png" alt="" class="img">
             <p>WhatsApp Messenger</p>
             <p>4.0</p>
         </div>
@@ -63,22 +63,22 @@
             <p>4.1</p>
         </div>
         <div class="images">
-            <img src="facebook.png" alt="">
+            <img src="facebook.png" alt="" class="img">
             <p>Facebook Lite</p>
             <p>4.1</p>
         </div>
         <div class="images">
-            <img src="tiktok lite.png" alt="">
+            <img src="tiktok lite.png" alt="" class="img">
             <p>Tiktok Lite</p>
             <p>4.4</p>
         </div>
         <div class="images">
-            <img src="snapchat.png" alt="">
+            <img src="snapchat.png" alt="" class="img">
             <p>Snapchat</p>
             <p>4.1</p>
         </div>
         <div class="images">
-            <img src="tiktok.png" alt="">
+            <img src="tiktok.png" alt="" class="img">
             <p>Tiktok</p>
             <p>4.4</p>
         </div>
@@ -88,27 +88,27 @@
     <h1 class="h1">Communication</h1>
     <div class="row-1">
         <div class="images">
-            <img src="snapchat.png" alt="">
+            <img src="snapchat.png" alt=""class="img">
             <p>Snapchat</p>
             <p>4.0</p>
         </div>
         <div class="images">
-            <img src="opera.jpeg" alt="">
+            <img src="opera.jpeg" alt=""class="img">
             <p>Opera Mini</p>
             <p>4.1</p>
         </div>
         <div class="images">
-            <img src="mess.jpeg" alt="">
+            <img src="mess.jpeg" alt="" class="img">
             <p>Messenger</p>
             <p>4.1</p>
         </div>
         <div class="images">
-            <img src="true.jpeg" alt="">
+            <img src="true.jpeg" alt=""class="img">
             <p>TrueCaller</p>
             <p>4.4</p>
         </div>
         <div class="images">
-            <img src="pho.jpeg" alt="">
+            <img src="pho.jpeg" alt="" class="img">
             <p>Pheonix Browser</p>
             <p>4.1</p>
         </div>
@@ -122,32 +122,32 @@
     <h1 class="h1">Editor's Choice</h1>
     <div class="row-1">
         <div class="images">
-            <img src="insta.jpeg" alt="">
+            <img src="insta.jpeg" alt="" class="img">
             <p>Instgaram</p>
             <p>4.0</p>
         </div>
         <div class="images">
-            <img src="true.jpeg" alt="">
+            <img src="true.jpeg" alt="" class="img">
             <p>TrueCaller</p>
             <p>4.1</p>
         </div>
         <div class="images">
-            <img src="zoom.jpeg" alt="">
+            <img src="zoom.jpeg" alt="" class="img">
             <p>zoom</p>
             <p>4.1</p>
         </div>
         <div class="images">
-            <img src="pin.jpeg" alt="">
+            <img src="pin.jpeg" alt="" class="img">
             <p>Pinterest</p>
             <p>4.4</p>
         </div>
         <div class="images">
-            <img src="meet.png" alt="">
+            <img src="meet.png" alt="" class="img">
             <p>Google Meet</p>
             <p>4.1</p>
         </div>
         <div class="images">
-            <img src="pho.jpeg" alt="">
+            <img src="pho.jpeg" alt="" class="img">
             <p>Pheonix Browser</p>
             <p>4.4</p>
         </div>
@@ -156,7 +156,7 @@
     <h1 class="h1">Business Tools</h1>
     <div class="row-1">
         <div class="images">
-            <img src="what.png" alt="">
+            <img src="what.png" alt=""class="img">
             <p>WhatsApp Messenger</p>
             <p>4.0</p>
         </div>
@@ -166,22 +166,22 @@
             <p>4.1</p>
         </div>
         <div class="images">
-            <img src="meet.png" alt="">
+            <img src="meet.png" alt="" class="img">
             <p>Google meet</p>
             <p>4.1</p>
         </div>
         <div class="images">
-            <img src="jumia.jpeg" alt="">
+            <img src="jumia.jpeg" alt=""class="img">
             <p>Jumia</p>
             <p>4.4</p>
         </div>
         <div class="images">
-            <img src="link.png" alt="">
+            <img src="link.png" alt=""class="img">
             <p>LinkedIn</p>
             <p>4.1</p>
         </div>
         <div class="images">
-            <img src="micro.jpeg" alt="">
+            <img src="micro.jpeg" alt="" class="img">
             <p>Microsoft Teams</p>
             <p>4.4</p>
         </div>
@@ -190,7 +190,7 @@
     <h1 class="h1">Social networking</h1>
     <div class="row-1">
         <div class="images">
-            <img src="facebook.png" alt="">
+            <img src="facebook.png" alt="" class="img">
             <p>Facebook</p>
             <p>4.0</p>
         </div>
@@ -200,22 +200,22 @@
             <p>4.1</p>
         </div>
         <div class="images">
-            <img src="insta.jpeg" alt="">
+            <img src="insta.jpeg" alt=""class="img">
             <p>Instagram</p>
             <p>4.1</p>
         </div>
         <div class="images">
-            <img src="snapchat.png" alt="">
+            <img src="snapchat.png" alt="" class="img">
             <p>Snapchat</p>
             <p>4.4</p>
         </div>
         <div class="images">
-            <img src="link.png" alt="">
+            <img src="link.png" alt="" class="img">
             <p>LinkedIn</p>
             <p>4.1</p>
         </div>
         <div class="images">
-            <img src="tiktok.png" alt="">
+            <img src="tiktok.png" alt="" class="img">
             <p>Tiktok</p>
             <p>4.4</p>
         </div>
