--- a/index.html
+++ b/index.html
@@ -63,22 +63,22 @@
             <p>4.1</p>
         </div>
         <div class="images">
-            <img src="facebook.png" alt="" class="img">
+            <img src="facebook.png" alt="" class="img1">
             <p>Facebook Lite</p>
             <p>4.1</p>
         </div>
         <div class="images">
-            <img src="tiktok lite.png" alt="" class="img">
+            <img src="tiktok lite.png" alt="" class="img1">
             <p>Tiktok Lite</p>
             <p>4.4</p>
         </div>
         <div class="images">
-            <img src="snapchat.png" alt="" class="img">
+            <img src="snapchat.png" alt="" class="img1">
             <p>Snapchat</p>
             <p>4.1</p>
         </div>
         <div class="images">
-            <img src="tiktok.png" alt="" class="img">
+            <img src="tiktok.png" alt="" class="img1">
             <p>Tiktok</p>
             <p>4.4</p>
         </div>
@@ -86,9 +86,9 @@
 
     </div>
     <h1 class="h1">Communication</h1>
-    <div class="row-1">
+    <div class="row-2">
         <div class="images">
-            <img src="snapchat.png" alt=""class="img">
+            <img src="snapchat.png" alt=""class="img1">
             <p>Snapchat</p>
             <p>4.0</p>
         </div>
@@ -120,9 +120,9 @@
 
     </div>
     <h1 class="h1">Editor's Choice</h1>
-    <div class="row-1">
+    <div class="row-3">
         <div class="images">
-            <img src="insta.jpeg" alt="" class="img">
+            <img src="insta.jpeg" alt="" class="insta">
             <p>Instgaram</p>
             <p>4.0</p>
         </div>
@@ -154,7 +154,7 @@
 
     </div>
     <h1 class="h1">Business Tools</h1>
-    <div class="row-1">
+    <div class="row-4">
         <div class="images">
             <img src="what.png" alt=""class="img">
             <p>WhatsApp Messenger</p>
@@ -171,7 +171,7 @@
             <p>4.1</p>
         </div>
         <div class="images">
-            <img src="jumia.jpeg" alt=""class="img">
+            <img src="jumia.jpeg" alt=""class="img1">
             <p>Jumia</p>
             <p>4.4</p>
         </div>
@@ -188,9 +188,9 @@
 
     </div>
     <h1 class="h1">Social networking</h1>
-    <div class="row-1">
+    <div class="row-5">
         <div class="images">
-            <img src="facebook.png" alt="" class="img">
+            <img src="facebook.png" alt="" class="img1">
             <p>Facebook</p>
             <p>4.0</p>
         </div>
@@ -200,12 +200,12 @@
             <p>4.1</p>
         </div>
         <div class="images">
-            <img src="insta.jpeg" alt=""class="img">
+            <img src="insta.jpeg" alt=""class="insta">
             <p>Instagram</p>
             <p>4.1</p>
         </div>
         <div class="images">
-            <img src="snapchat.png" alt="" class="img">
+            <img src="snapchat.png" alt="" class="img1">
             <p>Snapchat</p>
             <p>4.4</p>
         </div>
@@ -215,7 +215,7 @@
             <p>4.1</p>
         </div>
         <div class="images">
-            <img src="tiktok.png" alt="" class="img">
+            <img src="tiktok.png" alt="" class="img1">
             <p>Tiktok</p>
             <p>4.4</p>
         </div>
