--- a/index.html
+++ b/index.html
@@ -23,29 +23,36 @@
                 Kids
             </div>
             <div class="head-icons">
-                <i class="fa-solid fa-magnifying-glass"></i>
+                <i class="fa-solid fa-magnifying-glass" ></i>
                 <i class="fa-solid fa-question"></i>
                 <i class="fa-solid fa-user"></i>
             </div>
         </div>
         <div class="button-div">
-            <div>
-                <button class="button">Phone</button>
+            <div class="button-div1">
+                <i class="fa-solid fa-mobile-screen-button"></i>
+                <p class="button">Phone</p>
             </div>
-            <div>
-                <button class="button">Tablet</button>
+            <div class="button-div1" >
+                <i class="fa-solid fa-tablet-screen-button"></i>
+               <p class="button">Tablet</p>
+                
             </div>
-            <div>
-                <button class="button">TV</button>
+            <div class="button-div1">
+                <i class="fa-solid fa-tv"></i>
+                <p class="button">TV</p>
             </div>
-            <div>
-                <button class="button">Chromebook</button>
+            <div class="button-div1">
+                <i class="fa-solid fa-laptop"></i>
+                <p class="button">Chromebook</p>
             </div>
-            <div>
-                <button class="button">Watch</button>
+            <div class="button-div1">
+                <i class="fa-solid fa-stopwatch"></i>
+                <p class="button">Watch</p>
             </div>
-            <div>
-                <button class="button">Car</button>
+            <div class="button-div1">
+                <i class="fa-solid fa-car"></i>
+                <p class="button">Car</p>
             </div>
         </div>
     </header>
