--- a/index.html
+++ b/index.html
@@ -62,31 +62,37 @@
         <div class="images">
             <img src="what.png" alt="" class="img">
             <p>WhatsApp Messenger</p>
+            <i class="fa-solid fa-star"></i>
             <p>4.0</p>
         </div>
         <div class="images">
             <img src="tele.png" alt="">
             <p>Telegram</p>
+            <i class="fa-solid fa-star"></i>
             <p>4.1</p>
         </div>
         <div class="images">
             <img src="facebook.png" alt="" class="img1">
             <p>Facebook Lite</p>
+            <i class="fa-solid fa-star"></i>
             <p>4.1</p>
         </div>
         <div class="images">
             <img src="tiktok lite.png" alt="" class="img1">
             <p>Tiktok Lite</p>
+            <i class="fa-solid fa-star"></i>
             <p>4.4</p>
         </div>
         <div class="images">
             <img src="snapchat.png" alt="" class="img1">
             <p>Snapchat</p>
+            <i class="fa-solid fa-star"></i>
             <p>4.1</p>
         </div>
         <div class="images">
             <img src="tiktok.png" alt="" class="img1">
             <p>Tiktok</p>
+            <i class="fa-solid fa-star"></i>
             <p>4.4</p>
         </div>
 
@@ -97,31 +103,37 @@
         <div class="images">
             <img src="snapchat.png" alt=""class="img1">
             <p>Snapchat</p>
+            <i class="fa-solid fa-star"></i>
             <p>4.0</p>
         </div>
         <div class="images">
             <img src="opera.jpeg" alt=""class="img">
             <p>Opera Mini</p>
+            <i class="fa-solid fa-star"></i>
             <p>4.1</p>
         </div>
         <div class="images">
             <img src="mess.jpeg" alt="" class="img">
             <p>Messenger</p>
+            <i class="fa-solid fa-star"></i>
             <p>4.1</p>
         </div>
         <div class="images">
             <img src="true.jpeg" alt=""class="img">
             <p>TrueCaller</p>
+            <i class="fa-solid fa-star"></i>
             <p>4.4</p>
         </div>
         <div class="images">
             <img src="pho.jpeg" alt="" class="img">
             <p>Pheonix Browser</p>
+            <i class="fa-solid fa-star"></i>
             <p>4.1</p>
         </div>
         <div class="images">
             <img src="tele.png" alt="">
             <p>Telegram</p>
+            <i class="fa-solid fa-star"></i>
             <p>4.4</p>
         </div>
 
@@ -131,31 +143,36 @@
         <div class="images">
             <img src="insta.jpeg" alt="" class="insta">
             <p>Instgaram</p>
+            <i class="fa-solid fa-star"></i>
             <p>4.0</p>
         </div>
         <div class="images">
             <img src="true.jpeg" alt="" class="img">
             <p>TrueCaller</p>
+            <i class="fa-solid fa-star"></i>
             <p>4.1</p>
         </div>
         <div class="images">
             <img src="zoom.jpeg" alt="" class="img">
             <p>zoom</p>
+            <i class="fa-solid fa-star"></i>
             <p>4.1</p>
         </div>
         <div class="images">
             <img src="pin.jpeg" alt="" class="img">
             <p>Pinterest</p>
+            <i class="fa-solid fa-star"></i>
             <p>4.4</p>
         </div>
         <div class="images">
             <img src="meet.png" alt="" class="img">
-            <p>Google Meet</p>
+            <p>Google Meet</p><i class="fa-solid fa-star"></i>
             <p>4.1</p>
         </div>
         <div class="images">
             <img src="pho.jpeg" alt="" class="img">
             <p>Pheonix Browser</p>
+            <i class="fa-solid fa-star"></i>
             <p>4.4</p>
         </div>
 
@@ -165,31 +182,37 @@
         <div class="images">
             <img src="what.png" alt=""class="img">
             <p>WhatsApp Messenger</p>
+            <i class="fa-solid fa-star"></i>
             <p>4.0</p>
         </div>
         <div class="images">
             <img src="tele.png" alt="">
             <p>Telegram</p>
+            <i class="fa-solid fa-star"></i>
             <p>4.1</p>
         </div>
         <div class="images">
             <img src="meet.png" alt="" class="img">
             <p>Google meet</p>
+            <i class="fa-solid fa-star"></i>
             <p>4.1</p>
         </div>
         <div class="images">
             <img src="jumia.jpeg" alt=""class="img1">
             <p>Jumia</p>
+            <i class="fa-solid fa-star"></i>
             <p>4.4</p>
         </div>
         <div class="images">
             <img src="link.png" alt=""class="img">
             <p>LinkedIn</p>
+            <i class="fa-solid fa-star"></i>
             <p>4.1</p>
         </div>
         <div class="images">
             <img src="micro.jpeg" alt="" class="img">
             <p>Microsoft Teams</p>
+            <i class="fa-solid fa-star"></i>
             <p>4.4</p>
         </div>
 
@@ -199,31 +222,38 @@
         <div class="images">
             <img src="facebook.png" alt="" class="img1">
             <p>Facebook</p>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
             <p>4.0</p>
         </div>
         <div class="images">
             <img src="tele.png" alt="">
             <p>Telegram</p>
+            <i class="fa-solid fa-star"></i>
             <p>4.1</p>
         </div>
         <div class="images">
             <img src="insta.jpeg" alt=""class="insta">
             <p>Instagram</p>
+            <i class="fa-solid fa-star"></i>
             <p>4.1</p>
         </div>
         <div class="images">
             <img src="snapchat.png" alt="" class="img1">
             <p>Snapchat</p>
+            <i class="fa-solid fa-star"></i>
             <p>4.4</p>
         </div>
         <div class="images">
             <img src="link.png" alt="" class="img">
             <p>LinkedIn</p>
+            <i class="fa-solid fa-star"></i>
             <p>4.1</p>
         </div>
         <div class="images">
             <img src="tiktok.png" alt="" class="img1">
             <p>Tiktok</p>
+            <i class="fa-solid fa-star"></i>
             <p>4.4</p>
         </div>
 
